@@ -1,3 +1,8 @@
+2011-06-19  Xavier Perseguers  <xavier@causal.ch>
+
+	* [FEATURE] #27469: Pi2: Group links by level
+	* [BUGFIX] #27542: Single legal regulation block breaks the output
+
 2011-06-15  Xavier Perseguers  <xavier@causal.ch>
 
 	* [BUGFIX] #27468: Local override of template within pi1 does not work
